--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "latest",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
@@ -20,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "framer-motion": "^4.1.17",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
